--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
-<h1>Hello, World!</h1>
-<%= link_to 'My Blog', articles_path %>
+<h1>Blog World</h1>
+<%= link_to 'My Blog', articles_path %><br>
 <%= link_to 'New article', new_article_path %>
