--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,15 +1,7 @@
 <p>
-  <strong>Commenter:</strong>
-  <%= comment.commenter %>
-</p>
-
-<p>
-  <strong>Comment:</strong>
   <%= comment.body %>
-</p>
-
-<p>
-  <%= link_to 'Destroy Comment', [comment.article, comment],
+  by: <%= comment.commenter %><br>
+   <%= link_to 'Delete', [comment.article, comment],
                method: :delete,
                data: {confirm: 'Are you sure?'} %>
 </p>
