--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -15,3 +15,10 @@ ul {
 li {
   margin:0 0 10px 0;   
 }
+
+hr {
+  border: 0;
+  width: 100%;               
+  background-color: lightslategrey;
+  height: 1px;
+}
