remove link on cat image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-     <a href="https://imgur.com/WFtRmyf"><%= image_tag "rescuecat-transparent-large.png", class: "cat" %></a>
+     <%= image_tag "rescuecat-transparent-large.png", class: "cat" %></a>
     <%= yield %>
   </body>
 </html>
